--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':tool_utils', ':baselib', ':app', ':volleyhelper', ':commonrecyclerviewadpater', ':multi-image-selector', ':hf_load_springview', ':magicindicator', ':loadingindicator'
+include ':tool_utils', ':baselib', ':app', ':volleyhelper', ':commonrecyclerviewadpater', ':multi-image-selector', ':magicindicator', ':loadingindicator'
